# kd-tree-db

./: README.md  circle.yml  kd-tree-db.cabal  stack.yaml
app/: Main.hs
src/: KDTreeDatabase.hs
test/: Spec.hs
