name:                kd-tree-db
version:             0.1.0.0
synopsis:            kd-tree in-memory database
description:         Please see README.md
homepage:            http://github.com/githubuser/kd-tree-db#readme
license:             BSD3
license-file:        LICENSE
author:              Daishi Nakajima
maintainer:          nakaji.dayo@gmail.com
copyright:           2016 Daishi Nakajima
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     KDTreeDatabase
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , kdt == 0.2.3
                     , msgpack-rpc == 1.0.0
  default-language:    Haskell2010

executable kd-tree-db-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kd-tree-db
  default-language:    Haskell2010

test-suite kd-tree-db-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kd-tree-db
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/kd-tree-db
